Pseudocode for parse_srt_file

--- a/Caption_Clips_v1.ipynb
+++ b/Caption_Clips_v1.ipynb
@@ -92,21 +92,50 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import re\n",
+    "\n",
     "def parse_srt_file(srt_path): # string\n",
-    "    ...\n",
+    "    # open file\n",
+    "    # create list for storing strings\n",
+    "    # read line\n",
+    "    # if line does not have -->, store line, go to next\n",
+    "    # else\n",
+    "        # TODO ##########\n",
+    "\n",
+    "        # counter for # of entries\n",
+    "        # if whole line after --> not inside [], store this data:\n",
+    "            # string between \\n and -->\n",
+    "            # string between --> and \\n\n",
+    "            # string between \\n and \\n ... -->\n",
+    "            # string between --> ... \\n and \\n\n",
+    "            # increment counter\n",
+    "    \n",
+    "    \n",
+    "    # rely on number, -->, text, blank\n",
+    "    # counter\n",
+    "    # list or dict??\n",
+    "        # list of lists, all items accessed anonymously\n",
+    "    \n",
     "    # return time_text_extract # list of strings\n",
     "    \n",
-    "def calculate_time_index(time_text_extract, test_index): # list of strings, integer\n",
+    "    \n",
+    "    \n",
+    "        # for loop to read every line in the file\n",
+    "        # identifying symbol is -->\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def calculate_time_index(time_text_extract, test_index): # (list of strings, integer)\n",
     "    ...\n",
     "    # return caption_time_text # list of strings\n",
     "    \n",
-    "def escape_chars_for_cmd_line(caption_time_text): # list of strings\n",
+    "def escape_chars_for_cmd_line(caption_time_text): # (list of strings)\n",
     "    ...\n",
     "    # return title_time_text # list of strings\n",
     "    \n",
-    "# Prompt for test clips, or full file ???\n",
+    "# Prompt for test clips, or fulsl file ???\n",
     "    \n",
-    "def call_ffmpeg_from_cmd_line(caption_time_text, destined_dir, test_clips): # list of strings, string, list of ints\n",
+    "def call_ffmpeg_from_cmd_line(caption_time_text, destined_dir, test_clips): # (list of strings, string, list of ints)\n",
     "    ...\n",
     "    # output video clips to dir\n",
     "    # return status_message\n",
@@ -119,7 +148,26 @@
    "id": "f4b7a0cb-fb43-4b79-bb69-8a934833af5a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def parse_srt_file(srt_path): # string\n",
+    "    ...\n",
+    "    # return time_text_extract # list of strings\n",
+    "    \n",
+    "def calculate_time_index(time_text_extract, test_index): # list of strings, integer\n",
+    "    ...\n",
+    "    # return caption_time_text # list of strings\n",
+    "    \n",
+    "def escape_chars_for_cmd_line(caption_time_text): # list of strings\n",
+    "    ...\n",
+    "    # return title_time_text # list of strings\n",
+    "    \n",
+    "# Prompt for test clips, or fulsl file ???\n",
+    "    \n",
+    "def call_ffmpeg_from_cmd_line(caption_time_text, destined_dir, test_clips): # list of strings, string, list of ints\n",
+    "    ...\n",
+    "    # output video clips to dir\n",
+    "    # return status_message"
+   ]
   }
  ],
  "metadata": {
